Cambios solitados por el cliente, solo falta la parte de los testimonios, clientes y animación

--- a/css/style.css
+++ b/css/style.css
@@ -16,20 +16,24 @@ body{
     color: var(--color-default);
     background: var(--theme-color);
     transition: 0.5s background ease;
-    font-weight: 400;
+    font-size: 16px;
   }  
 
-h2{
+h1{
     font-size: 32px;
     color: var(--color-primary);
-    font-weight: 400;
+    font-weight: 600;
 }
 
+.navbar-collapse
+{
+    background: rgba(255, 255, 255, 0.9);
+}
 
 
 .section{
         background: var(--light-color);
-        padding: 85px 0;
+        padding: 85px 0px 40px;
         overflow: hidden
 
 }
@@ -69,7 +73,7 @@ h2{
 /*Header*/
 .logo-img
 {
-    width: 200px;
+    width: 220px;
 }
 
 #seccHeader .navbar
@@ -86,9 +90,9 @@ h2{
         display: flex;
         align-items: center;
         justify-content: space-between;
-        padding: 10px 20px;
+        padding: 7px 15px;
         font-family: var(--font-primary);
-        color: #FFF;
+        color: var(--color-primary) ;
         white-space: nowrap;
         transition: 0.3s;
         font-weight: 400;
@@ -110,6 +114,18 @@ h2{
     transform-origin: bottom left;
   }
   
+.navbar .nav-item a:hover
+{
+    color: var(--light-color) !important;
+} 
+
+.navbar .nav-item a.active
+{
+    color: var(--light-color) !important;
+    background-color: var(--text-yellow);
+
+} 
+
 .navbar .nav-item a::before {
     content: " ";
     display: block;
@@ -120,6 +136,18 @@ h2{
     z-index: -1;
     transition: transform .3s ease;
   }
+
+.navbar-toggler-icon{
+    background-image: url(../img/hamburger.png);
+    border: none;
+}
+
+.navbar-toggle,
+.navbar-toggler:focus{
+    border: none;
+    box-shadow: none;
+    transition: none;
+}
 
 .navbar .nav-item  .dropdown-menu a{
    color: var(--color-primary) !important;
@@ -148,7 +176,7 @@ h2{
 {
     width: 100%;
     position: relative;
-    background: url(../img/banner-home.jpg) center center;
+    background: url(../img/banner-home-3.jpg) center center;
     background-attachment: fixed;
     background-position-y: inherit;
     background-size: auto;
@@ -159,6 +187,29 @@ h2{
     display: flex;
     align-items: center;
     overflow: hidden;
+}
+
+@media (max-width: 768px) {
+    #seccBanner
+    {
+        background: url(../img/banner-home-responsive.jpg) center center;
+        background-size: cover;
+        padding: 0;
+        height: 50vh;
+    
+    }
+
+    #seccBanner h1, 
+    #seccBanner  p{
+        color:var(--light-color);
+    }
+
+    #map{
+        height: 50vh !important;
+    }
+    
+
+ 
 }
 
 #seccBanner h3{
@@ -206,7 +257,6 @@ h2{
     background-size: cover;
     padding: 60px 0 0 0;
     background-attachment: fixed;
-    height: 100vh;
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -277,6 +327,19 @@ h2{
     background-color: #f8f8f8;
 }
 
+#seccContactanos a
+{
+   color:var(--color-default);
+   text-decoration: none;
+}
+
+#seccContactanos .contact-info i
+{
+   color:var(--text-yellow);
+   padding-right: 10px;
+   padding-bottom: 15px;
+}
+
 /*Footer*/
 #seccFooter
 {
@@ -322,6 +385,17 @@ h2{
     font-size: 14px;
 }
 
+#seccFooter .footer-widget a
+{
+    color:var(--light-color);
+    text-decoration: none;
+}
+
+#seccFooter .footer-widget i
+{
+   padding-right: 10px;
+}
+
 /*****************************************************************/
 /*Nosotros*/
 #seccSitio .navbar a{
@@ -338,7 +412,7 @@ h2{
     background-size: cover;
     padding: 60px 0 0 0;
     display: flex;
-    height: 30vh;
+    height: 50vh;
     align-items: center;
     overflow: hidden;
 
@@ -356,7 +430,6 @@ h2{
     background-size: cover;
     padding: 0px 0 0 0;
     background-attachment: fixed;
-    height: 100vh;
     display: flex;
     align-items: center;
     overflow: hidden;
@@ -364,4 +437,20 @@ h2{
 #seccSitio .descripcion
 {
     color: var(--color-defaulty) !important;
+}
+
+/*Clientes*/
+
+#carouselGrupo .carousel-3d-slide
+{
+    width: auto !important;
+    height: auto !important;
+    background: transparent;
+ 
+}
+
+#carouselGrupo .carousel-3d-slide img:hover
+{
+    filter: grayscale(1);
+    cursor: pointer;
 }
